--- a/Dokumentacija/Specifikacija_programske_potpore.tex
+++ b/Dokumentacija/Specifikacija_programske_potpore.tex
@@ -157,8 +157,8 @@
 							\item Korisnik odabire opciju za registraciju							
 							\item Korisnik unosi potrebne korisničke podatke
 							\item Korisnik bira ulogu
-							\item Ako je odabrana uloga voditelja postaje ili istraživača automatski se šalje zahtjev za potvrdu uloge administratoru i korisnik ne može nastaviti registraciju dok se ne potvrdi uloga
 							\item Korisnik prima obavijest da registraciju mora potvrditi na mailu
+							\item Ako je odabrana uloga voditelja postaje ili istraživača automatski se šalje zahtjev za potvrdu uloge administratoru
 							
 						\end{packed_enum}
 						
@@ -1040,13 +1040,13 @@
 					\end{packed_item}%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 					%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%          37         %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 					%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-					\noindent \underbar{\textbf{UC37 – Stvaranje nove akcije }}
+					\noindent \underbar{\textbf{UC37 – Stvaranje nove akcije pretraživanja}}
 					\begin{packed_item}
 	
 						\item \textbf{Glavni sudionik: } Istraživač
 						\item  \textbf{Cilj:} : Stvaranje nove akcije pretraživanja i praćenja s detaljima o određenim vrstama, jedinkama ili staništima za proučavanje
 						\item  \textbf{Sudionici:} Baza podataka
-						\item  \textbf{Preduvjet:}
+						\item  \textbf{Preduvjet:} Istraživač nema aktivnu akciju
 						\item  \textbf{Opis osnovnog tijeka:}
 						
 						\item[] \begin{packed_enum}
@@ -1127,14 +1127,14 @@
 					\textit{}
 				
 					\begin{figure}[H]
-						\includegraphics[scale=0.9]{slike/dijagram admin.png} %veličina slike u odnosu na originalnu datoteku i pozicija slike
+						\includegraphics[scale=0.8]{slike/dijagram admin.png} %veličina slike u odnosu na originalnu datoteku i pozicija slike
 						\centering
 						\caption{Funkcionalnost neregistriranog korisnika, generaliziranog korisnika, administratora aplikacije i voditelja postaje}
 						\label{fig:Funkcionalnost neregistriranog korisnika, administratora aplikacije i voditelja postaje}
 					\end{figure}
 					
 					\begin{figure}[H]
-						\includegraphics[scale=0.9]{slike/dijagram ekipa.png} %veličina slike u odnosu na originalnu datoteku i pozicija slike
+						\includegraphics[scale=0.8]{slike/dijagram ekipa.png} %veličina slike u odnosu na originalnu datoteku i pozicija slike
 						\centering
 						\caption{Funkcionalnost tragača i istraživača}
 						\label{fig:Funkcionalnost neregistriranog korisnika, administratora aplikacije i voditelja postaje}
@@ -1144,9 +1144,93 @@
 				
 			\subsection{Sekvencijski dijagrami}
 				
-				\textbf{\textit{dio 1. revizije}}\\
+				\noindent 
+				\textbf{Obrazac uporabe UC1 - Registracija}\\
+
+				\noindent 
+				\textit{Neregistrirani korisnik šalje zahtjev za registracijom. Aplikacija dohvaća popis registriranih korisnika
+        				iz baze podataka.
+        				Ako korisnik nije na popisu aplikacija mu šalje potvrdu na mail koju korisnik mora potvrditi.
+        				U slučaju da se korisnik registrira da bi bio voditelj postaje ili istraživač aplikacija šalje administratoru
+        				zahtjev za potvrdom te administrator mora potvrditi registraciju.
+        				Zatim aplikacija zapisuje podatke u bazu podataka te dobiva potvrdu o uspjehu registracije od baze podataka
+        				te aplikacija korisniku prikazuje poruku o uspješnoj registraciji.
+        				Ako korisnik postoji u bazi podataka aplikacija, korisnik se obavještava da korisnik već postoji u bazi podataka.}
+
+				\eject
 				
-				\textit{dodati opis sek dijagrama i slike}
+				\begin{figure}[H]
+					\includegraphics[scale=0.5]{slike/UC1 - Registracija.png} %veličina slike u odnosu na originalnu datoteku i pozicija slike
+					\centering
+					\caption{Sekvencijski dijagram za UC1}
+					\label{fig:UC1 - Registracija}
+				\end{figure}
+
+				\eject
+
+				\noindent
+				\textbf{Obrazac uporabe UC19 - Dodavanje tragača na akciju}\\
+
+				\noindent
+				\textit{Voditelj postaje šalje aplikaciji upit za novim akcijama.
+        			Aplikacija dohvaća popis aktivnih akcija iz baze podataka te ih prikazuje voditelju postaje.
+        			Voditelj postaje zatim prolazi kroz sve aktivne akcije.
+        			Aplikacija iz baze podataka dohvaća sve slobodne tragače koji zadovoljavaju zahtjeve istraživača.
+        			U slučaju da ne postoje takvi tragači voditelju se postaje ispisuje poruka da nema dostupnih tragača.
+        			U slučaju da popis nije prazan voditelju postaje prikazuje se popis tragača.
+        			Voditelj postaje potom šalje odabrane tragače aplikaciji koja zatim dodaje akciju tragaču u bazi podataka te
+        			vraća voditelju postaje obavijest da je zahtjev poslan tragaču.}
+
+				\eject
+
+				\begin{figure}[H]
+					\includegraphics[scale=0.5]{slike/UC19 - Dodavanje tragača na akciju.png} %veličina slike u odnosu na originalnu datoteku i pozicija slike
+					\centering
+					\caption{Sekvencijski dijagram za UC19}
+					\label{fig:UC19 - Dodavanje tragača na akciju}
+				\end{figure}
+	
+				\eject
+
+				\noindent
+				\textbf{Obrazac uporabe UC24 - Završavanje akcije}\\
+
+				\noindent
+				\textit{Tragač šalje aplikaciji zahtjev za krajem akcije.
+        				Aplikacija dohvaća popis zadataka iz baze podataka i prikazuje popis tragaču.
+        				Ako popis nije prazan tragaču se ispisuje poruka da nisu svi zadatci riješeni.
+				        Ako je popis prazan aplikacija šalje bazi podataka zahtjev za krajem akcije
+        				te potom obavještava tragača da je akcija završena.}
+
+				\eject
+
+				\begin{figure}[H]
+					\includegraphics[scale=0.6]{slike/UC24 - Završavanje akcije.png} %veličina slike u odnosu na originalnu datoteku i pozicija slike
+					\centering
+					\caption{Sekvencijski dijagram za UC24}
+					\label{fig:UC24 - Završavanje akcije}
+				\end{figure}
+
+				\eject
+
+				\noindent
+				\textbf{Obrazac uporabe UC37 - Stvaranje nove akcije pretraživanja}\\
+
+				\noindent
+				\textit{Istraživač aplikaciji šalje zahtjev za novom akcijom.
+				        Aplikacija provjerava ima li istraživač već aktivne akcije.
+        				U slučaju da istraživač već ima aktivnu akciju aplikacija obavještava istraživača da već postoji aktivna akcija.
+        				Ako istraživač nema aktivnu akciju aplikacija bazi podataka šalje zahtjev za dodavanjem nove akcije te se
+        				istraživač obavještava da je akcija uspješno stvorena.}
+
+				\eject
+
+				\begin{figure}[H]
+					\includegraphics[scale=0.5]{slike/UC37 - Stvaranje nove akcije pretraživanja.png} %veličina slike u odnosu na originalnu datoteku i pozicija slike
+					\centering
+					\caption{Sekvencijski dijagram za UC37}
+					\label{fig:UC37 - Stvaranje nove akcije pretraživanja}
+				\end{figure}
 
 				\eject
 	
